Edits to paper 28

--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -109,7 +109,7 @@ To provide adhesive meshes for conservators, a reliable production process for t
 
 ## Acknowledgments
 
-The authors would like to thank the following persons and organizations for their assistance with our research: APM Technica AG, Heerbrugg, Switzerland; Innosuisse – Swiss Innovation Agency Art Technological Laboratory, Bern University of Applied Sciences, Switzerland; Conservation Program, and Materiality in Art and Culture research focus at Bern University of Applied Sciences, Bern University of the Arts, Switzerland; Swiss National Museum, Collection Center, Affoltern am Albis, Switzerland; Fondation Beyeler, Riehen, Switzerland; Doerner Institute, Bayerische Staatsgemäldesammlungen, Munich, Germany; Museumslandschaft Hessen-Kassel, Germany; Jonathan Debik and Sonja Bretschneider of Dresden, Germany; and Christina Robens and Verena Graf of Vienna, Austria.
+The authors would like to thank the following persons and organizations for their assistance with our research: APM Technica AG, Heerbrugg, Switzerland; Innosuisse – Swiss Innovation Agency Art Technological Laboratory; Conservation Program and Materiality in Art and Culture research focus at Bern University of Applied Sciences, Switzerland; Bern University of the Arts, Switzerland; Swiss National Museum, Collection Center, Affoltern am Albis, Switzerland; Fondation Beyeler, Riehen, Switzerland; Doerner Institute, Bayerische Staatsgemäldesammlungen, Munich, Germany; Museumslandschaft Hessen-Kassel, Germany; Jonathan Debik and Sonja Bretschneider of Dresden, Germany; and Christina Robens and Verena Graf of Vienna, Austria.
 
 {% backmatter %}
 
