Edits to paper 29

--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -223,7 +223,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^7]: This means that, for example, the optical density, light refraction, transparency, translucency, or even opacity, and degree of gloss of the bonded area ideally correspond to the individual optical surface properties of the surrounding fabric.
 
-[^8]: Compare to {% cite 'Flock 2014' %}, {% cite 'Flock et al. 2019' %}, {% cite 'Flock et al. 2021a' %}, and {% cite 'Flock et al. 2021b' %}.
+[^8]: Compare to {% cite 'Flock 2014' %}; {% cite 'Flock et al. 2019' %}; {% cite 'Flock et al. 2021a' %}; and {% cite 'Flock et al. 2021b' %}.
 
 [^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020a' '51, 55' %}; {% cite 'Flock et al. 2021a' %}; {% cite 'Flock et al. 2021b' %}; and {% cite 'Flock 2014' '130–39' %}.
 
@@ -237,7 +237,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^14]: Among the PVA dispersions considered, Mowilith DHS S1 showed satisfactory film properties, particularly homogeneous adhesive properties, and very good processing characteristics. It formed the most reliable bonds (compare to {% cite 'Flock 2014' %} and {% cite 'Flock 2020b' '' '2020b' %}).
 
-[^15]: Detailed information on the chosen setup has been published previously ({% cite 'Flock 2014' %}; {% cite 'Flock 2020b' '' '2020b' %}). The details of the experimental design are therefore omitted from this section. Valuable advice for future test series, the experimental design, and all the details, can be found in {% cite 'Flock 2020a' %}.
+[^15]: Detailed information on the chosen setup has been published previously ({% cite 'Flock 2014' %}, {% cite 'Flock 2020b' '' '2020b' %}). The details of the experimental design are therefore omitted from this section. Valuable advice for future test series, the experimental design, and all the details, can be found in {% cite 'Flock 2020a' %}.
 
 [^16]: Precise information on the materials and equipment used, as well as precise, illustrated instructions for the manufacture of bridging threads, can be followed in detail ({% cite 'Flock 2014' 'A.4–A.5' %}; {% cite 'Flock 2020a' '436' %}). The Beva 371 film was applied only on the single threads, not as a continuous layer. This idea refers to Winfried Heiber’s technique *Geweberasterhaftung* (fabric grid bonding): the melting of the thin adhesive film with a hot-air gun leads to adhesive-free interstices and an accumulation of adhesive on the surface of the threads ({% cite 'Heiber 1987' '72–76' %}; {% cite 'Heiber 1999' '362–63' %}).
 
