Edits to paper 30

--- a/content/6-interventions/30.md
+++ b/content/6-interventions/30.md
@@ -19,7 +19,7 @@ The 1974 Greenwich Conference on Comparative Lining Techniques might be called t
 
 New tools like vacuum hot tables, low-pressure suction tables, and regulated humidity chambers were being developed and employed. Modern technology offered an expanding variety of new synthetic materials, which were being anxiously embraced, along with high-tech testing methods to evaluate these materials. All of this elicited excitement and confidence in all that was new to our profession. However, an underlying movement was stirring as well, mostly associated with a conservator named Westby Percival-Prescott, who was concerned about the notion that we must act prophylactically, and that we may be simply replacing the how and what without first addressing the why ({% cite 'Villers 2003b' %}).
 
-Over the next couple of decades, a more cautious approach known as minimal intervention was becoming the mantra of more and more painting conservators. When I began my training in the mid-1980s, I was one of the young converts to this approach, even though some of my mentors considered Percival-Prescott an alarmist whose call for “a lining moratorium” was holding back progress in our field. While Percival-Prescott was advocating for caution and further investigation into both the efficacy and unintended consequences of lining, other critics soon came forward with much more scathing accusations of conservators destroying artworks due to their lack of connoisseurship and a rush to adopt new materials and methods ({% cite 'Walden 1985' %}; {% cite 'Beck and Daley 1994' %}).
+Over the next couple of decades, a more cautious approach known as minimal intervention was becoming the mantra of more and more paintings conservators. When I began my training in the mid-1980s, I was one of the young converts to this approach, even though some of my mentors considered Percival-Prescott an alarmist whose call for “a lining moratorium” was holding back progress in our field. While Percival-Prescott was advocating for caution and further investigation into both the efficacy and unintended consequences of lining, other critics soon came forward with much more scathing accusations of conservators destroying artworks due to their lack of connoisseurship and a rush to adopt new materials and methods ({% cite 'Walden 1985' %}; {% cite 'Beck and Daley 1994' %}).
 
 A cadre of conservators were similarly advocating for what might be described as a gentler approach to treating paintings. Take, for example, the 1988 American Institute for Conservation (AIC) meeting in New Orleans. Sandwiched between the presentation of technical reports by two engineers, Gustav Berger and Marion Mecklenberg, Lance Mayer and Gay Myers presented a paper titled “Thoughts on Unlined Paintings.” In this presentation, they pondered “the ways in which conservators wrestle . . . with the actual treatment of unlined paintings” ({% cite 'Mayer and Myers 1988' '222' %}) and stated that “the trend toward treating paintings conservatively implies . . . changing ways of thinking . . . [toward] . . . minimal treatment of problems as they develop, rather than thinking that any conservation treatment can solve all of a painting’s past, present and future problems” ({% cite 'Mayer and Myers 1988' '227' %}).
 
@@ -98,7 +98,7 @@ Those of us involved in structural canvas treatments are constantly discovering 
 ## Appendix: Materials
 
 Hollytex: spun-bonded nonwoven polyester fabric, TALAS, New York.
-[https://www.talasonline.com/Hollytex](https://www.talasonline.com/Hollytex).
+[https://www.talasonline.com/Hollytex](https://www.talasonline.com/Hollytex)
 
 Beva 371b film: ethylene vinyl acetate–based film adhesive. A variation on the mixture of Beva 371. Beva 371b is composed of ELVAX (500 g), aldehyde resin N (300 g), A-C copolymer (ethylene vinyl acetate adhesive), Cellolyn 21 (40 g/l), and paraffin dissolved in 1000 g of toluene. Available from Conservator's Products Company.
 [http://www.conservators-products.com/products.htm](http://www.conservators-products.com/products.htm)
