Replaced the abstract of paper 32
New abstract sent by Renate Poggendorf, edited and inserted 5/30/23

--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -10,7 +10,7 @@ contributor:
     last_name: "Poggendorf"
     title: "Head of Conservation, Neue Pinakothek and Sammlung Schack"
     affiliation: "Doerner Institut, Bayerische Staatsgemäldesammlungen, Munich"
-abstract: "Today the collection of the Neue Pinakothek in Munich comprises a collection inaugurated by King Ludwig I of Bavaria in 1853, which has continued to grow, while the Collection Schack, consisting of over 250 paintings purchased directly from the artists in the second half of the nineteenth century, has remained intact. The collection of the Neue Pinakothek has received more interactive treatment in line with the developing approaches to conservation in the twentieth century, while the Schack collection has received minimal treatment, with a large proportion remaining relatively untouched. In response to today’s more minimal approach to conservation treatments and with increasing emphasis on preventive care, the digitization of the institution’s conservation records afforded the opportunity to assess the effects of various treatments over time. Sufficient data were provided for an analysis of more than 1,700 paintings as well as the overview of a conservator who has worked with the collections for over twenty-five years."
+abstract: "The collections of the Neue Pinakothek and the Sammlung Schack—the two important collections of nineteenth-century art in Munich—contain a large number of paintings that have remained relatively untouched since their creation. Initially this was just an empirical observation by conservators. Despite incomplete data, a study verified that out of more than 1,700 paintings investigated, about seventy percent are unlined. This has been proven through an evaluation of technological information, and restoration reports. One of the results of this study is that conservators decided—in addition to traditional lining—in favor of very restrained interventions early on. The documented restoration techniques, including lining and other treatments, are generally explained and contextualized in relation to developments in the field of paintings conservation. The results of this study accord with the trend toward minimal intervention that began in German-speaking countries more than forty years ago."
 ---
 
 ## Introduction
