Edits to paper 34
Merucci

--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -9,7 +9,7 @@ contributor:
     last_name: "Merucci"
     title: "Head Conservator"
     affiliation: "National Gallery, Rome"
-abstract: "Going back in time through the collections of the National Gallery in Rome, material traces can be found in the ancient linings that are evidence of the modus operandi of the first restorers. However, few examples are preserved from the nineteenth century, probably due to the excessive use of glues. More numerous are the older testimonies, and these show greater care in the choice of canvas, more discreet use of glues and less impact of pressure and heat. Observation of the material data finally allows us to link a defined modus operandi to restorers hitherto only known by name through documents. The path backward allows us to assess evidence dating back to the mid-seventeenth century. Alongside the in-depth study of minimal methodologies, the study of this method appears to us to be a fundamental premise for a complete reevaluation of traditional methodologies, as they are not only functional to the test of centuries but also environmentally friendly and totally reversible."
+abstract: "Going back in time through the collections of the National Gallery in Rome, material traces can be found in the ancient linings that are evidence of the modus operandi of the first restorers. However, few examples are preserved from the nineteenth century, probably due to the excessive use of glues. More numerous are the older testimonies, and these show greater care in the choice of canvas, more discreet use of glues, and less impact of pressure and heat. Observation of the material data finally allows us to link a defined modus operandi to restorers hitherto only known by name through documents. The path backward allows us to assess evidence dating back to the mid-seventeenth century. Alongside the in-depth study of minimal methodologies, the study of this method appears to us to be a fundamental premise for a complete reevaluation of traditional methodologies, as they are not only functional to the test of centuries but also environmentally friendly and totally reversible."
 ---
 
 ## Introduction
