Edits to paper 35
Martos-Levif

--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -34,7 +34,7 @@ This paper first presents a synthesis of the multidisciplinary study carried out
 
 ## Behavior of a Corpus of Artworks Immersed for Seventy-Two Hours
 
-The behavior of paintings during and after immersion is linked to the physical and chemical properties of their constitutive materials and the painting technique, as well as the past intervention history of the artworks and their prior state of conservation. A canvas naturally oxidizes and becomes brittle over time, and storage conditions also affect aging, especially when artworks are stored under poor conditions. Examination of the fifty-one paintings showed that forty had already undergone conservation treatments prior to the flood, including major structural intervention on thirty-one of them, sometimes at the C2RMF. Two had been transferred; twenty-five had been lined with glue paste, one with wax resin, and two with synthetic adhesives; and one had been mounted on cardboard. In addition, many of the paintings that had not been entirely relined had reinforcing patches added to their back, and one of them had been strip-lined. Most of the paintings from the sixteenth and seventeenth centuries had been either transferred or lined using the traditional method with glue paste, while some from the eighteenth century had been lined with polyvinyl acetate (PVA) materials. Artworks from nineteenth century had undergone fewer structural conservation interventions but were more often treated with a large number of patches on the back of the paintings. [Table 35.1](#table-35-1) summarizes the past structural interventions of the paintings.
+The behavior of paintings during and after immersion is linked to the physical and chemical properties of their constitutive materials and the painting technique, as well as the past intervention history of the artworks and their prior state of conservation. A canvas naturally oxidizes and becomes brittle over time, and storage conditions also affect aging, especially when artworks are stored under poor conditions. Examination of the fifty-one paintings showed that forty had already undergone conservation treatments prior to the flood, including major structural intervention on thirty-one of them, sometimes at the C2RMF. Two had been transferred; twenty-five had been lined with glue paste, one with wax resin, and two with synthetic adhesives; and one had been mounted on cardboard. In addition, many of the paintings that had not been entirely relined had reinforcing patches added to their back, and one of them had been strip-lined. Most of the paintings from the sixteenth and seventeenth centuries had been either transferred or lined using the traditional method with glue paste, while some from the eighteenth century had been lined with polyvinyl acetate (PVA) materials. Artworks from the nineteenth century had undergone fewer structural conservation interventions but were more often treated with a large number of patches on the back of the paintings. [Table 35.1](#table-35-1) summarizes the past structural interventions of the paintings.
 
 {% figure 'table-35-1' 'pdf-float-top' %}
 
