Edits to paper 36

--- a/content/6-interventions/36.md
+++ b/content/6-interventions/36.md
@@ -23,7 +23,7 @@ abstract: "Remedial conservation aims to arrest the ongoing deterioration proces
 
 In November 2017, the Government Museum of Rajasthan approached Indira Gandhi National Centre for the Arts (IGNCA) regarding the documentation and conservation of its collection in the Government Museum Alwar. This museum was established in 1940 in the city palace of Alwar and is spread over three halls. However, the collection is displayed in four galleries. The first gallery contains sculptures and inscriptions; the second gallery contains musical instruments, a natural history collection, and decorative items. The third gallery houses the unique collection of canvas paintings and manuscripts, and the fourth gallery is dedicated to arms and armor.
 
-Alwar (a former principality) is a prominent city in the state of Rajasthan and is popularly known as the gateway to Rajasthan. The city is situated 160 kilometers southeast of New Delhi, the capital of India, and is part of the National Capital Region. In ancient times, this area was known as Matsya Mahajanpad; it is mentioned in the Buddhist text *Anguttar Nikaya* as being among sixteen *Mahajanpad*. Bairath (present-day Viratnagar) was the capital of Matsya Desh ([fig. 36.1](#fig-36-1)).
+Alwar (a former principality) is a prominent city in the state of Rajasthan and is popularly known as the gateway to Rajasthan. The city is situated 160 kilometers southeast of New Delhi, the capital of India, and is part of the National Capital Region. In ancient times, this area was known as Matsya Mahajanpad; it is mentioned in the Buddhist text *Anguttar Nikaya* as being among sixteen *Mahajanpadas*. Bairath (present-day Viratnagar) was the capital of Matsya Desh ([fig. 36.1](#fig-36-1)).
 
 {% figure 'fig-36-1' %}
 
