--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -50,7 +50,7 @@ From the 1970s to the 1990s, various low-pressure envelope methods were combined
 
 ## Paintings on Canvas as Viscoelastic Systems: The Role of Temperature
 
-The risks and beneficial effects of heat transfer in conservation treatments must be assessed within a comprehensive understanding of the nature of paintings and painting as physical systems. This understanding is crucial to evaluating paintings’ materials, condition, potential response to treatment, and long-term sustainability and stability of the intervention—and to formulating treatment protocols. In 1991, Mecklenburg published experimental data indicating that artists paints are viscoelastic systems ({% cite 'Mecklenburg and Tumosa 1991b' %}). The viscoelastic behavior of paintings has been investigated in the context of their cleaning and mechanical properties ({% cite 'Hedley and Odlyha 1989' %}; {% cite 'Michalski 1991' %}; {% cite 'Hagan et al. 2007' %}; {% cite 'Hagan 2017' %}; {% cite 'Phenix 2011' %}), and the effects of temperature and humidity have been investigated in the contexts of art transportation and preventive conservation. However, the effects of temperature and viscoelastic behavior have been investigated less in the context of structural treatments of paintings on canvas. These aspects were addressed by Berger and others ({% cite 'Russell and Berger 1982' %}; {% cite 'Berger and Russell 1984' %}, {% cite 'Berger and Russell 1986' '' '1986' %}, {% cite 'Berger and Russell 1988' '' '1988' %}; {% cite 'Goddard 1989' %}; {% cite 'Olsson and Markevičius 2010' %}, {% cite 'Olsson and Markevičius 2017' '' '2017' %}; {% cite 'Markevičius et al. 2013' %}; {% cite 'Markevičius et al. 2017' '' '2017' %}).
+The risks and beneficial effects of heat transfer in conservation treatments must be assessed within a comprehensive understanding of the nature of paintings and painting as physical systems. This understanding is crucial to evaluating paintings’ materials, condition, potential response to treatment, and long-term sustainability and stability of the intervention—and to formulating treatment protocols. In 1991, Mecklenburg published experimental data indicating that artists paints are viscoelastic systems ({% cite 'Mecklenburg and Tumosa 1991b' %}). The viscoelastic behavior of paintings has been investigated in the context of their cleaning and mechanical properties ({% cite 'Hedley and Odlyha 1989' %}; {% cite 'Michalski 1991' %}; {% cite 'Hagan et al. 2007' %}; {% cite 'Hagan 2017' %}; {% cite 'Phenix 2011' %}), and the effects of temperature and humidity have been investigated in the contexts of art transportation and preventive conservation. However, the effects of temperature and viscoelastic behavior have been investigated less in the context of structural treatments of paintings on canvas. These aspects were addressed by Berger and others ({% cite 'Russell and Berger 1982' %}; {% cite 'Berger and Russell 1984' %}, {% cite 'Berger and Russell 1986' '' '1986' %}, {% cite 'Berger and Russell 1988' '' '1988' %}; {% cite 'Goddard 1989' %}; {% cite 'Olsson and Markevičius 2010' %}, {% cite 'Olsson and Markevičius 2017' '' '2017' %}; {% cite 'Markevičius et al. 2013' %}, {% cite 'Markevičius et al. 2017' '' '2017' %}).
 
 Once fully dry, paint films behave as elastic, viscoelastic, or viscoplastic materials, depending on the chemical nature of their components. With aging variations in the pigments used, oil films acquire a greater degree of cross-linking and stiffness, with a corresponding rise in glass transition temperature (Tg) from ambient temperature (0°C–50°C) to as high as 75°C–100°C for paints containing lead white ({% cite 'Phenix 2011' %}). Glass transition temperatures of acrylic, alkyd, and oil primers were found to be in the range of 21°C–44°C ({% cite 'Hagan et al. 2007' %}).
 
@@ -84,7 +84,7 @@ In 2010, the authors first proposed using carbon nanotubes for precision heat tr
 
 ## Interim MAT System: Mobile Accurate Temperature Management
 
-In order to advance research and treatment methodologies of precision heat transfer, available wound wire technology has also been employed in the design of a series of silicone heating mats and associated consoles for conservation use. The first MAT system for cultural heritage applications was commercialized in 2022.[^2] Operational parameters and design features have been further adapted to prioritize performance in the low-energy range, increase portability, and function with standard domestic power input. The standardized mat dimensions range from 2 × 5 inches (5 × 13 cm) to 25 × 30 inches (64 × 76 cm), with maximum size of 30 × 40 inches (76 × 102 cm; 230V only), and the units function at 120V for North American use or 230V for EU use; larger-than-standard mats require more powerful consoles and a power input of 240V or higher. 
+In order to advance research and treatment methodologies of precision heat transfer, available wound wire technology has also been employed in the design of a series of silicone heating mats and associated consoles for conservation use. The first MAT system for cultural heritage applications was commercialized in 2022.[^2] Operational parameters and design features have been further adapted to prioritize performance in the low-energy range, increase portability, and function with standard domestic power input. The standardized mat dimensions range from 2 × 5 inches (5 × 13 cm) to 25 × 30 inches (64 × 76 cm), with a maximum size of 30 × 40 inches (76 × 102 cm; 230V only), and the units function at 120V for North American use or 230V for EU use; larger-than-standard mats require more powerful consoles and a power input of 240V or higher. 
 
 ## From Precision Heat Transfer to New Low-and-Slow Targeted Treatment Methodology
 
