Edits to paper 40
Piper Hough Michalski

--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -43,7 +43,7 @@ If a reinforcement is added to the verso and if the painting has zero tension, t
 
 {% figure 'fig-40-2' %}
 
-The deformations shown figures 40.1 and 40.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](/1-history/2/) and by [Daly-Hartin, Michalski, and Hagan.](/3-open-questions/19/))
+The deformations shown in figures 40.1 and 40.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](/1-history/2/) and by [Daly-Hartin, Michalski, and Hagan.](/3-open-questions/19/))
 
 To maintain flatness over the years, a reinforcement must stress relax much more slowly than the paint layers. This suggests that one should select either inorganic materials (metal, glass) or highly cross-linked, filled polymers.
 
@@ -89,7 +89,7 @@ All the strips of material used in treatments 4–11 were fabricated so that the
 
 {% figure 'fig-40-4' %}
 
-Details of each treatment are as follows. 
+Details of each treatment are as follows: 
 
 1. Moisture, heat, and flattening; no reinforcement. Moisture was applied to the crack area at recto using damp, felted Gore-Tex for twenty-four hours, followed by suction from recto and heat from verso.
 
@@ -157,7 +157,7 @@ The cupping in the untreated cracks reached heights of \~0.7 mm in the slack pa
 
 ### Final States of Treatments after Twenty-One Years
 
-In terms of the predictions of curl (see [fig. 40.1a](#fig-40-1)), given the \~0.38 mm thickness of paint and ground for the model painting, assuming a region for unrestrained curl about 20 mm wide on each side of the cracks, and assuming the shrinkage differential between oil paint and acrylic ground of 0.2% estimated earlier, the result places the blue circle in the inset graph in [fig. 40.1](#fig-40-1), predicting a cupping height of \~1.6 mm. The average cupping height of untreated cracks in slack paintings, 0.68 mm, is less than half of this estimate, implying either that the estimate of shrinkage is too high or, more likely, that the canvas hinge (and perhaps the size) is restraining curl.
+In terms of the predictions of curl (see [fig. 40.1a](#fig-40-1)), given the \~0.38 mm thickness of paint and ground for the model painting, assuming a region for unrestrained curl about 20 mm wide on each side of the cracks, and assuming the shrinkage differential between oil paint and acrylic ground of 0.2% estimated earlier, the result places the blue circle in the inset graph in [figure 40.1](#fig-40-1), predicting a cupping height of \~1.6 mm. The average cupping height of untreated cracks in slack paintings, 0.68 mm, is less than half of this estimate, implying either that the estimate of shrinkage is too high or, more likely, that the canvas hinge (and perhaps the size) is restraining curl.
 
 In terms of the predictions of stress alignment without reinforcements (see [fig. 40.1b](#fig-40-1)), given the thickness of the paint and ground, \~0.38 mm, and the canvas thickness of \~0.76 mm, then by the equation in [figure 40.1b](#fig-40-1), we expect untreated, heat/moisture-treated, or size-treated cracks to have cupping height of \~0.57 mm. Untreated cracks in taut paintings (three samples) reached 0.51 ± 0.02 mm. If we estimate that half the ground sank into the canvas weave, then the prediction falls to \~0.52 mm, as observed. The cupping of heat/moisture treatment (1) reached 0.45 mm, 12% lower than untreated cracks, while size treatments (12, 13) reached 0.35 mm, 31% lower.
 
@@ -223,7 +223,7 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^2]: Timoshenko derived the curvature of any two-layer laminate with differential shrinkage. If the differential shrinkage is (ε<sub>1</sub>−ε<sub>2</sub>), m is the ratio of the two thicknesses, n is the ratio of the two moduli of elasticity, and t is the laminate thickness, then radius of curvature is R=(t\*(3\*(1+m)\^2+(1+m\*n)\*(m\^2+1/(m\*n))))/(6\*(ε<sub>1</sub>−ε<sub>2</sub>)\*(1+m)\^2). The height h of the arc over a base of w and curvature R is h=R-(R\^2-w\^2). See [https://www.mathopenref.com/sagitta.html](https://www.mathopenref.com/sagitta.html).
 
-[^3]: Given initial values of m=n=1 (see note 2 above) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the inset graph in [figure 40.1](#fig-40-1).
+[^3]: Given initial values of m=n=1 (see note 2) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the inset graph in [figure 40.1](#fig-40-1).
 
 [^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ({% cite 'Clark and Tschentke 1929' %}). Pure medium with driers, cured in the dark, shrank 1%–1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high RH ({% cite 'Browne 1955' %}). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ({% cite 'Michalski 1991' 'n25' %}).
 
