Edits to paper 45
Froment

--- a/content/8-posters/45.md
+++ b/content/8-posters/45.md
@@ -96,7 +96,7 @@ The influence of chalk on color change was also measured in reconstructed ground
 
 By correlating experimental results from the reconstructions with results of the pilot study, it was found that an increased proportion of chalk reduced the hiding power of nearly all grounds. Furthermore, the study revealed that grounds composed of 98% chalk combined with either yellow iron oxide or 1:1 yellow iron oxide and raw umber, as well as the ground composed of 80% chalk with lead white, hid the opacity charts to varying degrees that were dependent on thickness. Ground types composed of chalk combined with raw umber and lead white remained opaque regardless of thickness. Results for grounds composed of chalk with yellow iron oxide were not conclusive.
 
-### Quartz-Containing Oil-Bound Grounds
+### Oil-Bound Grounds Containing Quartz
 
 After 1642, canvas paintings by Rembrandt are frequently primed with a quartz containing ground. Results of technical analysis revealed that this ground consists mainly of clay minerals, with a high proportion of quartz sand in linseed oil ({% cite 'Groen 2005' %}). Research suggests that the composition of quartz ground varies among paintings, with the variables including the type of clay minerals and the proportion of trace elements such as chalk, iron oxide, and carbon black. An experiment in this study examined the influence of the clay-to-quartz ratio, as well as the effect of adding of yellow iron oxide on the extent of color change.
 
