Edits to paper 50
Kunikata

--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -56,7 +56,7 @@ sample weight after adhesive impregnation − sample weight before adhesive impr
 
 </div>
 
-The results are shown in [figure 50.2](#fig-50-2).
+The results are shown in [figure 50.2](#fig-50-2) below.
 
 {% figure 'fig-50-2' %}
 
