--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -28,7 +28,7 @@ contributor:
   - first_name: "Matteo"
     last_name: "Rossi-Doria"
     title:
-    affiliation: "Painting Conservator, C.B.C., Conservazione Beni Culturali"
+    affiliation: "Painting Conservator, C.B.C. Conservazione Beni Culturali"
     sort_as: "05"
   - first_name: "Mikkel"
     last_name: "Scharff"
@@ -43,7 +43,7 @@ contributor:
   - first_name: "Ángel"
     last_name: "Vicente-Escuder"
     title: "Professor"
-    affiliation: "Instituto de Tecnología de los Materiales, Universidad Politécnica de Valéncia"
+    affiliation: "Instituto de Tecnología de los Materiales, Universitat Politècnica de València, Spain"
     sort_as: "08"
   - first_name: "Dolores Julia"
     last_name: "Yusà-Marco"
