Edits to poster 52

--- a/content/8-posters/52.md
+++ b/content/8-posters/52.md
@@ -76,7 +76,7 @@ With the painting facedown, the 4-inch buckle at the upper left corner and a few
 
 ### Part 2: Blind-Panel Stretcher + Loose-Lining Hybrid Treatment
 
-The new stretcher, reinforced with four cross braces (two horizontal, two vertical), was custom fabricated by Upper Canada Stretchers to receive interlocking blind-panel inserts to create a flush, rigid surface for the painting’s pictorial plane ([fig. 52.3](#fig-52-3)). Along the inner surface of each 3-inch stretcher bar, a 1-inch-wide × 1/2-inch-deep recess was cut into the wood, along with a 5/8-inch deep kerf that followed flush along this recess ([fig. 52.4](#fig-52-4)). This would allow for the panel inserts to interlock tightly within the stretcher bar system, ensuring a level, immobile support. 
+The new stretcher, reinforced with four cross braces (two horizontal, two vertical), was custom fabricated by Upper Canada Stretchers to receive interlocking blind-panel inserts to create a flush, rigid surface for the painting’s pictorial plane ([fig. 52.3](#fig-52-3)). Along the inner surface of each 3-inch stretcher bar, a 1-inch-wide × 1/2-inch-deep recess was cut into the wood, along with a 5/8-inch-deep kerf that followed flush along this recess ([fig. 52.4](#fig-52-4)). This would allow for the panel inserts to interlock tightly within the stretcher bar system, ensuring a level, immobile support. 
 
 {% figure 'fig-52-3' %}
 
