Edits to poster 53

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -82,7 +82,7 @@ Lengths of plastic PVC tubing were connected together using 90-degree elbows to 
 
 To begin the relining, the lightweight HDPE plastic sheeet throughout was rolled back; the painting was placed facedown on the lining table; the stretcher, old lining fabric, and adhesive were removed; and holes and tears in the canvas were secured. The tears were mainly butt-joined using Beva 371 film as the adhesive. Bridging glass-fiber strips were applied over the tear for additional support and adhered using Beva 371.
 
-Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly overlapping one another ([fig. 53.3](#fig-53-3)). The lining fabric was then rolled out on top of the interleaf, and the green foil was repositioned ([fig. 53.4](#fig-53-4)). Before relining proceeded, a dry run ensured that the air would be evacuated quickly and evenly, and any irregularity in the structure was evaluated using raking light.
+Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly overlapping one another ([fig. 53.3](#fig-53-3)). The lining fabric was then rolled out on top of the interleaf, and the lightweight HDPE plastic sheet was repositioned ([fig. 53.4](#fig-53-4)). Before relining proceeded, a dry run ensured that the air would be evacuated quickly and evenly, and any irregularity in the structure was evaluated using raking light.
 
 {% figure 'fig-53-3' %}
 
@@ -90,7 +90,7 @@ Bands of glass-fiber interleaf were laid onto the painting’s reverse, slightly
 
 The activation of the adhesive bonding the lining canvas to the interleaf and the interleaf to the original support was done in situ. The dry adhesive was reactivated using solvent vapors: xylene and ethanol (30:70). Cheesecloth was chosen as a carrier for the vapors due to its ability to absorb polar solvents easily. The solvent delivery cloth measured slightly larger than the surface area of the applied adhesive. The cloth was rolled into a tight bundle and wrapped with cling film (Saran wrap). A precalculated amount of solvent was then injected (75–80 ml per m<sup>2</sup>), and the roll was clamped for several hours to guarantee an even distribution of the solvents within the roll. At that point, the roll was unwrapped and placed quickly (to reduce evaporation loss) on top of the prepositioned, lining canvas. A string was attached to each corner of the solvent delivery cloth before the cloth was folded, rolled, and wrapped to help speed distribution over the reverse.
 
-To ensure the tightest possible contact between lining fabric and cheesecloth, the green foil was repositioned and the motor activated (50 mbar). After approximately twenty minutes, the motor was deactivated and the cheesecloth replaced with a heavy woolen fabric to absorb any excess solvent vapors present within the envelope, thus accelerating the bonding process. The package was then re-covered with the green foil, and the motor was reactivated (110 mbar) ([fig. 53.5](#fig-53-5)). After about two hours, the motor was switched off and the upper lightweight HDPE plastic sheet was removed to allow the remaining solvent vapors to evaporate.[^10]
+To ensure the tightest possible contact between lining fabric and cheesecloth, the lightweight HDPE plastic sheet was repositioned and the motor activated (50 mbar). After approximately twenty minutes, the motor was deactivated and the cheesecloth replaced with a heavy woolen fabric to absorb any excess solvent vapors present within the envelope, thus accelerating the bonding process. The package was then re-covered with the lightweight HDPE plastic sheet, and the motor was reactivated (110 mbar) ([fig. 53.5](#fig-53-5)). After about two hours, the motor was switched off and the upper lightweight HDPE plastic sheet was removed to allow the remaining solvent vapors to evaporate.[^10]
 
 {% figure 'fig-53-5' %}
 
@@ -100,7 +100,7 @@ The treatment was designed to be both lasting and reversible. Relining with an a
 
 ## Acknowledgments
 
-The complex lining system described in this text was developed by author Jos van Och. It is an adaptation of the mist-lining system. The cold-lining system using acrylic dispersions and a glass-fiber interleaf was first used for a large-scale ceiling painting from Huys Amerongen, Utrecht, in 2009, and further evolved for this particular series of paintings. The unique approach to solving structural problems presented by wax-resin-lined legacy paintings is the outcome of van Och's thirty-year expertise in treating canvas paintings. This experience was shared by the co-authors who were fellows at SRAL for the duration of this project. The mist-lining system is sill practical today, though van Och is retired, and is discussed elsewhere in this publication (see particularly "Demystifying Mist-Lining," paper 9).
+The complex lining system described in this text was developed by author Jos van Och. It is an adaptation of the mist-lining system. The cold-lining system using acrylic dispersions and a glass-fiber interleaf was first used for a large-scale ceiling painting from Huys Amerongen, Utrecht, in 2009, and further evolved for this particular series of paintings. The unique approach to solving structural problems presented by wax-resin-lined legacy paintings is the outcome of van Och's thirty-year expertise in treating canvas paintings. This experience was shared by the co-authors who were fellows at SRAL for the duration of this project. The mist-lining system is sill practiced today, though van Och is retired, and is discussed elsewhere in this publication (see particularly "Demystifying Mist-Lining," paper 9).
 
 The authors thank Ana Pereira for the FTIR-ATR analysis, Ilona Jaaranen and Bascha Stabik for helping with practical work, and Nico van Bohemen Jr. for the interview.
 
