Edits to poster 57

--- a/content/8-posters/57.md
+++ b/content/8-posters/57.md
@@ -45,7 +45,7 @@ For the issue of two-sided paintings, conservators from GOSNIIR offered this tec
 
 ## Stretchers
 
-According to modern conservation standards, new stretchers must be extensible, and in the case of double-sided pictures, systems with wedges, screws, and springs all may be suitable. But if conservators do not wish to give preference to one side of the picture, a system must be developed that results in a situation where the painting does not have a verso. The stretching should be performed using the same standards as for an ordinary, one-sided picture: the tension should be evenly distributed along the perimeter and in the corners to keep the painting in plane for optimal viewing and display ({% cite 'Zaycev 1977' %}). But now we also have a goal to prevent stretcher bars from obscuring the paint layer on both sides of the artwork, eliminating the need for crossbars. Following are technical details for an example of a two-sided picture that underwent structural treatment in our studio in GOSNIIR.
+According to modern conservation standards, new stretchers must be extensible, and in the case of double-sided pictures, systems with wedges, screws, and springs all may be suitable. But if conservators do not wish to give preference to one side of the picture, a system must be developed that results in a situation where the painting does not have a verso. The stretching should be performed using the same standards as for an ordinary, one-sided picture: the tension should be evenly distributed along the perimeter and in the corners to keep the painting in plane for optimal viewing and display ({% cite 'Zaycev 1977' %}). But now we also have a goal to prevent stretcher bars from obscuring the paint layer on both sides of the artwork, eliminating the need for crossbars. Following are technical details for an example of a two-sided picture that underwent structural treatment in our studio at GOSNIIR.
 
 ### Case Study: Andrey Vasnetsov’s *New Village*
 
