Edits to poster 60

--- a/content/8-posters/60.md
+++ b/content/8-posters/60.md
@@ -91,4 +91,4 @@ Given the positive results of using Beva 371 for the *Sword of Damocles*, it was
 
 The experience gained from both these projects was stimulating. The deteriorations resulting from the different lining techniques used in the paintings’ respective pasts were diverse. These experiences encouraged the author to observe and monitor the behavior of other paintings in the collection. Damages were mapped in the collection more closely and with a new perspective. It was observed that paintings lined using glue-paste adhesives undergo regular dimensional changes with changing seasons, whereas others show different problems, and paintings on panel have altogether distinct structural conservation issues. This understanding raises further questions with respect to conservation interventions at CSMVS: Should conservators follow the often recommended policy of wait, watch, and monitor, and treat only those paintings that have begun to show signs of deterioration? Or should paintings be conserved using materials and techniques more suitable to Mumbai weather before any future damage occurs?
 
-Based on our local environment, we should strive for a balance to adapt both new techniques and traditional old methods that have stood the test of time. Through various national and international collaborations, CSMVS has taken the initiative to take experts’ opinions on these issues and draw a conservation plan to safeguard our collection.
+Based on our local environment, we should strive for a balance and adapt both new techniques and traditional old methods that have stood the test of time. Through various national and international collaborations, CSMVS has taken the initiative to take experts’ opinions on these issues and draw a conservation plan to safeguard our collection.
